Fixed spacing of images in figures.

--- a/annotum-base/assets/main/less/utility.less
+++ b/annotum-base/assets/main/less/utility.less
@@ -167,6 +167,11 @@ dl.kv dd {
 	border-width: 1px 0;
 	padding: 12px 12px 4px;
 }
+.figure .photo,
+.figure figcaption .fn,
+.figure .license {
+	margin-bottom: 8px;
+}
 .figure .photo {
 	float: left;
 	margin-right: 13px;
@@ -180,10 +185,7 @@ dl.kv dd {
 	font-size: 13px;
 	margin: 0 0 8px;
 }
-.figure figcaption .fn,
-.figure .license {
-	margin-bottom: 8px;
-}
+
 .figure .license {
 	display: block;
 }
